<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    tools:context=".main.infoFragment"
    android:orientation="vertical"
    android:id="@+id/infoFragment">

    <TextView
        android:id="@+id/InfoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/H1"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/Voice_commands_info" />

    <LinearLayout
        android:id="@+id/CommandList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:src="@drawable/ic_point"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/list_centering_padding"
                android:textSize="@dimen/H4"
                android:text="@string/COMM_Open"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:src="@drawable/ic_point"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/list_centering_padding"
                android:textSize="@dimen/H4"
                android:text="@string/COMM_OpenNo"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:src="@drawable/ic_point"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/list_centering_padding"
                android:textSize="@dimen/H4"
                android:text="@string/COMM_Delete"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:src="@drawable/ic_point"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/list_centering_padding"
                android:textSize="@dimen/H4"
                android:text="@string/COMM_DeleteNo"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:src="@drawable/ic_point"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/list_centering_padding"
                android:textSize="@dimen/H4"
                android:text="@string/COMM_Reply"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:src="@drawable/ic_point"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/list_centering_padding"
                android:textSize="@dimen/H4"
                android:text="@string/COMM_GoBack"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:src="@drawable/ic_point"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/list_centering_padding"
                android:textSize="@dimen/H4"
                android:text="@string/COMM_Menu"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:src="@drawable/ic_point"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/list_centering_padding"
                android:textSize="@dimen/H4"
                android:text="@string/COMM_NewMessage"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:src="@drawable/ic_point"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/list_centering_padding"
                android:textSize="@dimen/H4"
                android:text="@string/COMM_Send"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>